feat: :sparkles: add new features
